--- a/PAGES/Contacto.html
+++ b/PAGES/Contacto.html
@@ -80,7 +80,8 @@
                 <center>
                             <div class="card-header text-white"
                             style="background-color: #FFA021;">
-                                <a class="nav-link text-white" href="Agendar.html"><h2>Agendar una Cita</h2></a></div>
+                                <a class="nav-link text-white" href="Agendar.html"><h2>Agendar una Cita</h2></a>
+                            </div>
                 </center>
             </div>
                         
